--- a/students/soft1714080902114/app/src/main/res/layout/activity_take_photo.xml
+++ b/students/soft1714080902114/app/src/main/res/layout/activity_take_photo.xml
@@ -2,19 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/backg">
 
     <Button
         android:id="@+id/take_photo"
-        android:layout_width="match_parent"
+        android:layout_width="99dp"
         android:layout_height="wrap_content"
-        android:text="拍照" />
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="20dp"
+        android:text="拍照"
+        android:layout_gravity="center"
+        android:textColor="@color/colorAccent" />
 
     <Button
         android:id="@+id/choose_from_album"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="相册中选择照片" />
+        android:background="@color/colorPrimary"
+        android:layout_marginTop="15dp"
+        android:text="相册中选择照片"
+        android:layout_gravity="center"
+        android:textColor="@color/colorAccent" />
 
     <ImageView
         android:id="@+id/picture"
